kubernetes/apps/jdownloader/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jdownloader
  namespace: jdownloader
  labels:
    app: jdownloader
spec:
  type: ClusterIP
  ports:
    - name: webui
      port: 5800
      targetPort: 5800
      protocol: TCP
  selector:
    app: jdownloader
